--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -4,7 +4,93 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-docs:
+  update-put-gif:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: record put
+        uses: charmbracelet/vhs-action@v1
+        with:
+          path: ./docs/tapes/put.tape
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload put.gif
+        uses: actions/upload-artifact@v3
+        with:
+          name: put-gif
+          path: ./docs/put.gif
+
+  update-list-gif:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: record list
+        uses: charmbracelet/vhs-action@v1
+        with:
+          path: ./docs/tapes/list.tape
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload list.gif
+        uses: actions/upload-artifact@v3
+        with:
+          name: list-gif
+          path: ./docs/list.gif
+
+  update-restore-gif:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: record restore
+        uses: charmbracelet/vhs-action@v1
+        with:
+          path: ./docs/tapes/restore.tape
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload restore.gif
+        uses: actions/upload-artifact@v3
+        with:
+          name: restore-gif
+          path: ./docs/restore.gif
+
+  update-restore-ui-gif:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: record restore-ui
+        uses: charmbracelet/vhs-action@v1
+        with:
+          path: ./docs/tapes/restore-ui.tape
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload restore-ui.gif
+        uses: actions/upload-artifact@v3
+        with:
+          name: restore-ui-gif
+          path: ./docs/restore-ui.gif
+
+  update-clear-gif:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: record clear
+        uses: charmbracelet/vhs-action@v1
+        with:
+          path: ./docs/tapes/clear.tape
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload clear.gif
+        uses: actions/upload-artifact@v3
+        with:
+          name: clear-gif
+          path: ./docs/clear.gif
+
+  create-pull-request:
+    needs:
+      - update-put-gif
+      - update-list-gif
+      - update-restore-gif
+      - update-restore-ui-gif
+      - update-clear-gif
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -13,35 +99,26 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - name: record put
-        uses: charmbracelet/vhs-action@v1
+      - name: download put.gif
+        uses: actions/download-artifact@v3
         with:
-          path: ./docs/tapes/put.tape
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: record list
-        uses: charmbracelet/vhs-action@v1
+          name: put-gif
+      - name: download list.gif
+        uses: actions/download-artifact@v3
         with:
-          path: ./docs/tapes/list.tape
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: record restore
-        uses: charmbracelet/vhs-action@v1
+          name: list-gif
+      - name: download restore.gif
+        uses: actions/download-artifact@v3
         with:
-          path: ./docs/tapes/restore.tape
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: record restore-ui
-        uses: charmbracelet/vhs-action@v1
+          name: restore-gif
+      - name: download restore-ui.gif
+        uses: actions/download-artifact@v3
         with:
-          path: ./docs/tapes/restore-ui.tape
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: record clear
-        uses: charmbracelet/vhs-action@v1
+          name: restore-ui-gif
+      - name: download clear.gif
+        uses: actions/download-artifact@v3
         with:
-          path: ./docs/tapes/clear.tape
-          token: ${{ secrets.GITHUB_TOKEN }}
+          name: clear-gif
 
       - name: create pull request
         uses: peter-evans/create-pull-request@v4
