--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,15 +4,37 @@ permissions: {}
 
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - main
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
 
 jobs:
-  release:
+  release-please:
     timeout-minutes: 10
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write # for create a release
+      pull-requests: write # for open a pull request
+      issues: write # for create labels
+    outputs:
+      should-release: ${{ steps.release-please.outputs.release_created }}
+    steps:
+      - uses: googleapis/release-please-action@a02a34c4d625f9be7cb89156071d8567266a2445 # v4.2.0
+        id: release-please
+        with:
+          release-type: simple
+          token: ${{ github.token }}
+
+  release:
+    if: ${{ needs.release-please.outputs.should-release == 'true' }}
+    timeout-minutes: 10
+    needs: release-please
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write # for upload release assets
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
         with:
